--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -39,7 +40,7 @@ dependencies {
     implementation "com.android.support:multidex:1.0.3"
     implementation "com.google.firebase:firebase-auth:16.0.2"
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
-    implementation "com.andkulikov:transitionseverywhere:1.8.0"
+    //implementation "com.andkulikov:transitionseverywhere:1.8.0"
 
 }
 apply plugin: 'com.google.gms.google-services'
