--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 .idea/caches/build_file_checksums.ser
 .idea/caches/build_file_checksums.ser
 .idea/kotlinc.xml
+app/src/debug/res/values/google_maps_api.xml
