--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
@@ -41,6 +42,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:16.0.2"
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
     //implementation "com.andkulikov:transitionseverywhere:1.8.0"
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
