--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'io.fabric'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -37,13 +39,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation "com.google.firebase:firebase-database:16.0.1"
-    implementation "com.google.firebase:firebase-firestore:17.0.2"
     implementation "com.android.support:multidex:1.0.3"
     implementation "com.google.firebase:firebase-auth:16.0.2"
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
     //implementation "com.andkulikov:transitionseverywhere:1.8.0"
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
 
 }
 apply plugin: 'com.google.gms.google-services'
