--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'io.fabric'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "fi.samuliraty.suurpeli.suurpelifirebase"
+        applicationId "fi.suurpelisovellus.suurpeli.suurpelifirebase"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
