--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "fi.suurpelisovellus.suurpeli.suurpelifirebase"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 3
-        versionName "1.11"
+        versionCode 5
+        versionName "1.12a"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
