--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "fi.suurpelisovellus.suurpeli.suurpelifirebase"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 6
-        versionName "1.13a"
+        versionCode 7
+        versionName "1.14"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
